@@ -24,6 +24,7 @@ extern const TString JobUserName;
 extern const TString SchedulerUserName;
 extern const TString FileCacheUserName;
 extern const TString OperationsCleanerUserName;
+extern const TString OperationsClientUserName;
 
 extern const TString EveryoneGroupName;
 extern const TString UsersGroupName;
